[metadata]
name = rotterdam
author = the rotterdam authors
author-email = autoscale-dev@rackspace.com
summary = Spiky otters.
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils
